--- a/01/index.html
+++ b/01/index.html
@@ -1,1 +1,9 @@
-<p> <span> hola </p> </span>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+<p> <span> Hola </span></p>
+</body>
+</html>
