Ejercicio 1 corregido, se agregó title - Juan y Nicolás

--- a/01/index.html
+++ b/01/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Ejercicio 1 corregido por Nicolás y Juan</title>
 </head>
 <body>
 <p> <span> Hola </span></p>
