Ejercicio 2 corregido por Nicolás y Juan

--- a/02/index.html
+++ b/02/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <title></title>
-</body>
-<head>
+	
+	<head>
+	<title>Ejercicio 2 corregido por Nicolás y Juan</title>
+	</head>
 
+	<body>
+    	<p> hola! </p>
+	</body>
 
-</head>
 </html>
