--- a/04/index.html
+++ b/04/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
+		<title>Desafío Latam</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
 
-</head>
-<body>
-
-</body>
+	</body>
 </html>
