--- a/05/index.html
+++ b/05/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-	<h1> Título 1 </h1>
-<body>
-
-</body>
+	<head>
+		<title>Ejercicio 5 - Nicolás y Juan</title>
+		<meta charset="utf-8">
+	</head>
+		
+	<body>
+		<h1> Título 1 </h1>
+	</body>
 </html>
