--- a/06/index.html
+++ b/06/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
+	<title>Ejercicio 6 - Nicolás y Juan</title>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio recusandae culpa, repellat ex nobis, qui. Quidem id amet, cumque, porro, et nulla provident, quis eum sequi excepturi incidunt similique voluptatum!
+	</head>
+	<body>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio recusandae culpa, repellat ex nobis, qui. Quidem id amet, cumque, porro, et nulla provident, quis eum sequi excepturi incidunt similique voluptatum!</p>
 
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci officiis ipsum rem quos. Placeat, pariatur rerum velit iste aliquid blanditiis sunt nesciunt distinctio vel, iure dolorum possimus expedita in non!
-</body>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci officiis ipsum rem quos. Placeat, pariatur rerum velit iste aliquid blanditiis sunt nesciunt distinctio vel, iure dolorum possimus expedita in non!</p>
+	</body>
 </html>
