Ejercicio 7 - Nicolás y Juan

--- a/07/index.html
+++ b/07/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
+	<head>
+		<title>Ejercicio 7 - Nicolás y Juan</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
 
-	<p Párrafo1> </p>
+		<p>Párrafo1</p>
 
-</body>
+	</body>
 </html>
