--- a/08/index.html
+++ b/08/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title></title>
-	<p> hola </p>
-</head>
-<body>
-
-</body>
+	<head>
+		<title>Ejercicio 8 - Nicolás y Juan</title>
+		<meta charset="utf-8">
+				
+	</head>
+	<body>
+		<p> hola </p>
+	</body>
 </html>
