--- a/09/index.html
+++ b/09/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
+	<head>
+		<title>Ejercicio 9 - Nicolás y Juan</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
 
-	<a href="Soy un link"> www.google.cl </a>
+		<a href="www.google.cl">Soy un link</a>
 
-</body>
+	</body>
 </html>
