--- a/10/index.html
+++ b/10/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title> HELLO !! </title>
-</head>
-<body>
+	<html>
+	<head>
+		<title> HELLO !! </title>
+		<meta charset="utf-8">
+	</head>
+	<body>
 
-	<p color="red"> Párrafo rojo </p>
+		<p style="color:red;"> Párrafo rojo </p>
 
-</body>
+	</body>
 </html>
