--- a/11/index.html
+++ b/11/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
+	<head>
+		<title>Ejercicio 11 - Nicolás y Juan</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
 
-	<p style="color:red> Párrafo rojo </p>
+		<p style="color:red"> Párrafo rojo </p>
 
-</body>
+	</body>
 </html>
