--- a/14/index.html
+++ b/14/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
+	<head>
+		<title>Ejercicio 14 - Nicolás y Juan</title>
+		<meta charset="utf-8">
+	</head>
+	
+	<body>
 
-<a href="www.desafiolatam.com">link a Desafío Latam!</a>
+	<a href="http://www.desafiolatam.com">link a Desafío Latam!</a>
+	<a href="http://www.google.com"><img src="logo.png" alt="Logo"></a>
 
-</body>
+
+	</body>
 </html>
