--- a/15/index.html
+++ b/15/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
+	<html>
+	
+	<head>
+		<title>Ejercicio 15 - Nicolás y Juan</title>
+		<meta charset="utf-8">
+	</head>
+	
+	<body>
 
-	<img src="/logo.png">
+		<img src="llama.jpg" alt="Llama">
 
-</body>
+	</body>
 </html>
