--- a/16/index.html
+++ b/16/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
-	<img src="images/logo.png">
-   	<a href="http://www.google.cl"> hola </a>
-	</img>
-</body>
+	<head>
+		<title>Ejercicio 16 - Nicolás y Juan</title>
+		<meta charset="utf-8">
+	</head>
+	
+	<body>
+		
+		<p>Hola</p>
+		<a href="http://www.google.cl"><img src="images/logo.png" alt="Logo"></a>
+
+	</body>
 </html>
