--- a/20/index.html
+++ b/20/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <head> Go Green </head>
+    <title>Ejercicio 20</title>
+    <style type="text/css">
+    	p{
+			color: green;
+		}
+    </style>
+
 </head>
 <body>
     <p> Hellowww </p>
