--- a/21/index.html
+++ b/21/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	
-    <meta charset="utf-8">
-</head>
-<body>
-    <div style="color:yellow">
-        <p> Goooooood byeeeee !! </p style="color:red">
-        <p> Holaaaa !!! </p>
-    </div>
-</body>
+	<head>
+		<title>Ejercicio 21 - Nicolás y Juan</title>
+	    <meta charset="utf-8">
+	</head>
+	<body>
+	    <div style="color:yellow">
+	        <p style="color:red"> Goooooood byeeeee !! </p>
+	        <p> Holaaaa !!! </p>
+	    </div>
+	</body>
 </html>
