--- a/23/index.html
+++ b/23/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<style>
+	<head>
+		<title>Ejercicio 23</title>
+		<meta charset="utf-8">
+		<style>
 
-		<p> {
-			color:  green;
-		}
-	</style>
-</head>
-<body>
-	<div>
-		<p> Hellowww </p>
-		<p> Lorem ipsum dolor sit amet. </p>
-	</div>
-</body>
+			p {
+				color: green;
+			}
+		</style>
+	</head>
+	
+	<body>
+		<div>
+			<p> Hellowww </p>
+			<p> Lorem ipsum dolor sit amet. </p>
+		</div>
+	</body>
 </html>
