--- a/25/index.html
+++ b/25/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
+	<head>
+		<title>Ejercicio 25 - Nicolas y Juan</title>
+		<meta charset="utf-8">
+		<style type="text/css">
+			img{
+				max-height: 500px;
+				max-width: 500px;
+			}
+		</style>
+	</head>
+	
+	<body>
 
-	<img src="images/logo.png" alt="logo desafio latam" >
-	<img src="images/logo.png" alt="logo desafio latam" >
+		<img src="images/logo.png" alt="logo desafio latam" width="500" height="500">
+		<img src="images/logo.png" alt="logo desafio latam">
 
-</body>
+	</body>
 </html>
