--- a/26/113000 p.html
+++ b/26/113000 p.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-	<style>
-		font-family: 'Slabo 27px', serif;
-	</style>
-</head>
-<body>
+	<head>
+		<meta charset="utf-8">
+		<title>Ejercicio 26 - Nicolas y Juan</title>
+		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+		<style type="text/css">
+			h1{
+				font-family: 'Slabo 27px', serif;
+			}
+		</style>
+	</head>
 
-	<img src="images/logo.png" alt="logo desafio latam" >
-	<h1> Deafío Latam </h1>
-	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quaerat beatae architecto possimus explicabo ex, temporibus, reprehenderit, deserunt alias excepturi quidem molestias, magnam hic asperiores sapiente animi. Ex, provident, consectetur! </p>
-	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-</body>
+	<body>
+
+		<img src="images/logo.png" alt="logo desafio latam" >
+		
+		<h1> Desafío Latam </h1>
+		
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quaerat beatae architecto possimus explicabo ex, temporibus, reprehenderit, deserunt alias excepturi quidem molestias, magnam hic asperiores sapiente animi. Ex, provident, consectetur! </p>
+
+	</body>
 </html>
